--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/product
+spring.datasource.username=sthevenalves
+spring.datasource.password=247636
